API: Added 'PatientAppointments' Doctor Endpoint
