# api/src/config/routes/protected/DoctorRoutes.ts
@@ -5,8 +5,9 @@ import endpointTimeout from "../../../utilities/core/EndpointTimeout.js";
 // Imports guards
 import guardIsDoctor from "../../../guards/IsDoctor.js";
 
-// Import routes & schemas
-//TODO Insert doctor endpoints here
+// Import appointment endpoints
+import schemaPatientAppointments from "../../../schema/appointments/SchemaPatientAppointments.js";
+import routePatientAppointments from "../../../routes/appointments/RoutePatientAppointments.js";
 
 /**
  * Function to declare all internally protected doctor routes
@@ -22,10 +23,10 @@ const protectedDoctorRoutes = (): {
     // Guards
     protectedDoctorRoutes.addHook("onRequest", guardIsDoctor);
 
-    // Test endpoints
-    protectedDoctorRoutes.get("/test", //TODO Replace with actual doctor endpoints
-      {},
-      endpointTimeout(async (_req, rep) => rep.status(200).send(JSON.stringify({ message: "Hello Doctor!" }, null, 2)), 5000), // 5 seconds
+    // Appointment endpoints
+    protectedDoctorRoutes.get("/patient/:patientId/appointments/:type",
+      { schema: schemaPatientAppointments },
+      endpointTimeout(routePatientAppointments, 10000), // 10 seconds
     );
   },
   prefix: '/doctor',
